webpackmodfed/amazonmf/k8-mfes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrito
  namespace: indramf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carrito
  template:
    metadata:
      labels:
        app: carrito
    spec:
      containers:
      - name: carrito
        image: carrito:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: carrito
  namespace: indramf
spec:
  selector:
    app: carrito
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfil
  namespace: indramf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perfil
  template:
    metadata:
      labels:
        app: perfil
    spec:
      containers:
      - name: perfil
        image: perfil:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: perfil
  namespace: indramf
spec:
  selector:
    app: perfil
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos
  namespace: indramf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productos
  template:
    metadata:
      labels:
        app: productos
    spec:
      containers:
      - name: productos
        image: productos:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: productos
  namespace: indramf
spec:
  selector:
    app: productos
  ports:
  - name: http
    port: 80
    targetPort: 80
